# my-intrinsics-workspace

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  common.cpp  common.h  timer.h
src/x8664/: CMakeLists.txt
src/x8664/avx2/: CMakeLists.txt
src/x8664/avx2/00_load/: 00_load.cpp  CMakeLists.txt  readme.md
src/x8664/avx2/01_add_sub/: 01_add_sub.cpp  CMakeLists.txt  readme.md
